4947220: (process)Runtime.exec() cannot invoke applications with unicode parameters(win)

To use CreateProcessW on Windowns platform

Reviewed-by: martin